增加函数